@@ -119,10 +119,12 @@ test_ReadHexKeys(void) {
 void
 test_ReadKeyFileWithComments(void) {
 	struct key* keys = NULL;
+	const char *path = CreatePath("key-test-comments", INPUT_DIR);
 
-	TEST_ASSERT_EQUAL(2, auth_init(CreatePath("key-test-comments", INPUT_DIR), &keys));
-	
+	TEST_ASSERT_NOT_NULL(path);
+	TEST_ASSERT_EQUAL(2, auth_init(path, &keys));
 	TEST_ASSERT_NOT_NULL(keys);
+	free((void *)path);
 
 	struct key* result = NULL;
 	get_key(10, &result);
